# openpyxl-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
benchmarks/: bench_vs_openpyxl.py  generate_report.py
docs/plans/: 2026-02-24-openpyxl-rust-design.md  2026-02-24-openpyxl-rust-impl.md  2026-02-24-v02-design.md  2026-02-24-v02-impl.md  2026-02-24-v03-impl.md  2026-02-25-rust-backed-cells-design.md  2026-02-25-rust-backed-cells-impl.md  2026-02-25-rust-owns-everything-rewrite.md  2026-02-27-parity-test-suite-design.md  2026-02-27-parity-test-suite-impl.md
python/openpyxl_rust/: __init__.py  cell.py  cell.pyi  comments.py  datavalidation.py  header_footer.py  image.py  loader.py  page.py  page_break.py  properties.py  protection.py  rich_text.py  table.py  workbook.py  workbook.pyi  worksheet.py  worksheet.pyi
python/openpyxl_rust/chart/: __init__.py  base.py  reference.py  series.py
python/openpyxl_rust/formatting/: __init__.py  rule.py
python/openpyxl_rust/styles/: __init__.py  alignment.py  alignment.pyi  borders.py  borders.pyi  fills.py  fills.pyi  fonts.py  fonts.pyi  protection.py
src/: format.rs  lib.rs  load.rs  parse.rs  save.rs  types.rs  workbook.rs
tests/: test_autofilter.py  test_batch.py  test_bugfixes_v05.py  test_cell.py  test_cell_style_compat.py  test_charts.py  test_comments.py  test_compat.py  test_conditional_formatting.py  test_data_validation.py  test_datetime.py  test_dimensions.py  test_edge_cases.py  test_hyperlinks.py  test_images.py  test_iterators.py  test_load.py  test_load_formatting.py  test_named_ranges.py  test_page_setup.py  test_parity.py  test_protection.py  test_row_col_ops.py  test_save.py  test_save_styles.py  test_styles.py  test_styles_extended.py  test_tables.py  test_type_validation.py  test_workbook.py  test_worksheet.py  test_worksheet_api.py
