[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openpyxl_rust"
requires-python = ">=3.9"
version = "0.5.0"
description = "Fast, Rust-backed openpyxl-compatible Excel writer"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
keywords = ["excel", "xlsx", "openpyxl", "rust", "spreadsheet"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "openpyxl_rust._openpyxl_rust"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["python", "tests", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (can reduce readability)
    "B010",   # setattr with constant (used in style classes)
    "UP007",  # X | Y union syntax (need 3.9 compat)
    "UP045",  # X | None syntax (need 3.9 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["openpyxl_rust"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
